--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Integrative Guidelines</title>
   </head>
   <body>
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <!-- <script src="./node_modules/flowbite/dist/datepicker.js"></script> -->
+
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
