--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrative Guidelines</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Exo+2:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
-    <!-- <script src="./node_modules/flowbite/dist/datepicker.js"></script> -->
-
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
